Upsampling and Downsampling data using Python
Upsampling and Downsampling data using Numpy and Scikit Learn

--- a/Upsampling and Downsampling.ipynb
+++ b/Upsampling and Downsampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "74e3320c",
+   "id": "805a151d",
    "metadata": {},
    "source": [
     "# Using Pandas and Numpy"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55e5d70",
+   "id": "2e895795",
    "metadata": {},
    "source": [
     "Dataset-CreditCard"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "17354455",
+   "id": "a7ded6bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "e1ea3a68",
+   "id": "179ee93f",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60feb73b",
+   "id": "da2f8b8c",
    "metadata": {},
    "source": [
     "Legit and fraud bifurcation"
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "2b1c16af",
+   "id": "6932ef21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "6fc45d34",
+   "id": "43e06cf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e028558a",
+   "id": "875b750b",
    "metadata": {},
    "source": [
     "Convert Data to DataFrame"
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "7134da6b",
+   "id": "14c18d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "db6447d6",
+   "id": "251a5028",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a969885",
+   "id": "649bdae5",
    "metadata": {},
    "source": [
     "Check for class 0"
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "68e2df19",
+   "id": "5dbab38a",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae481e7f",
+   "id": "19831d3c",
    "metadata": {},
    "source": [
     "Class for class 1"
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ffc39aa7",
+   "id": "9ede4e99",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8b3ee77",
+   "id": "a08ad34c",
    "metadata": {},
    "source": [
     "Upsample"
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "9858145a",
+   "id": "378d46ba",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe2d049",
+   "id": "975d9c61",
    "metadata": {},
    "source": [
     "Downsample"
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "43b20e17",
+   "id": "b6a3d7e0",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe24766",
+   "id": "faa691df",
    "metadata": {},
    "source": [
     "# Using Scikit learn"
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4589794",
+   "id": "d72244c0",
    "metadata": {},
    "source": [
     "Downsample"
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "424b522c",
+   "id": "8deab6eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "f87ed483",
+   "id": "f93767cb",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "591c7bd4",
+   "id": "4c97263f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "4ed5af33",
+   "id": "e479c4d2",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d92d4178",
+   "id": "aa1dc205",
    "metadata": {},
    "source": [
     "Upsample"
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "d5dcd939",
+   "id": "e6b37c59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "080d45d8",
+   "id": "9f5f60b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "31031502",
+   "id": "bb823c65",
    "metadata": {},
    "outputs": [
     {
@@ -814,10 +814,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87fecfe1",
+   "id": "11959631",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Theory -->\n",
+    "\n",
+    "# Separate majority and minority classes\n",
+    "df_majority = df[df.iloc[:,4608]==1]\n",
+    "df_minority = df[df.iloc[:,4608]==0]\n",
+    " \n",
+    "# Downsample majority class\n",
+    "df_majority_downsampled = resample(df_majority, \n",
+    "                                 replace=False,    \n",
+    "                                 n_samples=1000)\n",
+    "#Upsample minority class\n",
+    "df_minority_upsampled = resample(df_minority, \n",
+    "                                 replace=True,     \n",
+    "                                 n_samples=1000)\n",
+    "# Combine minority class with downsampled majority class\n",
+    "df_up_down_sampled = pd.concat([df_majority_downsampled, df_minority_upsampled])"
+   ]
   }
  ],
  "metadata": {
